hphp/test/zend/good/ext-date/bug28599.php
<?php
date_default_timezone_set("Europe/Amsterdam");
print gmdate("d-m-Y H:i:s", strtotime("+30 minutes", 1100535573));
?>